# sugarboard

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  app.json  docker-compose.yml  nicegui_app.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/: cache.py  charts.py  config.py  data_services.py  nightscout_client.py  state.py  ui_theme.py  utils.py
static/: script.js  style.css
tests/: conftest.py  test_app.py  test_charts_theme.py
tests/data/: history.json  recent.json
