[tool.black]
target-version = ['py39']
exclude = '''
/(\.git | \.cache | \.pytest_cache | venv | coverage)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
skip = ['.cache', '.pytest_cache', 'venv', 'coverage', '.git']

[tool.coverage.run]
omit = ['tests/*']

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
]

[tool.pytest.ini_options]
minversion = "6.0"


[tool.poetry]
name = "sugarboard"
version = "0.1.0"
description = "Streamlit App displaying personal glucose monitoring stats."
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
numpy = "*"
plotnine = "*"
streamlit = "*"